# suricata-notify

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
.github/workflows/: docker-image.yml
src/: main.rs  types.rs  watcher.rs
src/backends/: dummy.rs  factory.rs  http.rs  mod.rs
src/config/: mod.rs  reader.rs
src/parser/: mod.rs
src/templates/: mod.rs
