[package]
name = "suricata-notify"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
env_logger = "0.11.8"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.27"
notify = "8.1.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
